Truncate birthPlace; fix height of couple portrait connector.

--- a/assets/css/modules/_persons.styl
+++ b/assets/css/modules/_persons.styl
@@ -157,6 +157,10 @@ background:url('data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz
 
 .fs-person-details__birthPlace {
   clear: both;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  width: 100%;
 }
 
 
@@ -397,7 +401,7 @@ background:url('data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz
     }
 
     .fs-couple & .fs-person-portrait__container:after {
-      height: 34px;
+      height: 44px;
       left: -9px;
     }
 
